2002-08-02  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dao.c (dao_set_bold, dao_set_underlined, dao_set_italic,
	dao_set_percent): Bug fix: dao relative indexing.

	* simulation.c (create_reports): Reporting look improvements.  Use
	dao_prepare_output.

2002-07-30  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* simulation.[ch]: Initial version of the Risk Simulation tool.
	It's similar to XL's add-on plug-in's like @RISK but not yet that
	good (yet).

	* solver/reports.c, dao.[ch]: Moved find_name to dao.c and renamed
	it as dao_find_name.

	* solver/reports-write.c, dao.[ch]: Moved fill_header_titles to
	dao.c and renamed it as dao_write_header.
	
2002-07-29  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* analysis-tools.c
	(analysis_tool_exponential_smoothing_engine_run): Added standard
	errors output.

2002-07-26  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* filter.[ch]: New file for filtering submenu functionality.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Added Gaussian tail and
	uniform integer distributions.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Added Landau
	distribution.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Add Rayleigh Tail
	distribution.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Add Exponential Power.

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Added Levy.

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Added Gamma, Geometric,
	Laplace, Logarithmic, Logistic, Lognormal, Pareto, Rayleigh, T,
	Type I Gumbel, and Type II Gumbel.
	
2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* random-generator.c (tool_random_engine): Added Beta, Cauchy,