@@ -1,3 +1,10 @@
+2002-08-03  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* simulation.c (simulation_tool): Fixed leaks in error condition.
+	Redraw and recompute with sheet->simulation_round=0.
+	(create_reports): Set summary labels italic. Fix the row positions
+	if first_round > 1.
+	
 2002-08-02  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* dao.c (dao_set_bold, dao_set_underlined, dao_set_italic,
